# pro

./: .env  .env.production  .gitignore  INSTALLATION_AR.txt  package-lock.json  package.json
src/: App.jsx  index.css  index.html  index.js  test-groups.js  test-imports.js  test_solution.js
src-tauri/icons/: README.md  icon.icns
src/components/: EnhancedToast.jsx  ProtectedRoute.jsx  SoundSettings.jsx  ToastContainer.jsx
src/context/: CompanyDataContext.jsx  DataContext.jsx  DatabaseDataContext.jsx  FinalDataContext.jsx  NotificationContext.jsx  NotificationContextWithSound.jsx  SimpleAuthContext.jsx  SimpleDataContext.jsx  SmartPaymentSystem.jsx
src/contexts/: CompanyContext.jsx  TabContext.jsx
src/data/: mockData.js
src/database/: ComprehensiveTestDataCreator.js  DefaultDataCreator.js  IndexedDBManager.js  MigrationService.js  config.js
src/hooks/: useCurrency.js  useSystemSettingsAdvanced.js
src/middleware/: SubscriptionGuard.jsx
src/pages/: APISettings.jsx  CompanySelectionPage.jsx  CustomersSimple.jsx  Dashboard.jsx  EnhancedNotifications.jsx  Notifications.jsx  ProductsSimple.jsx
src/services/: api.js  companyAPI.js  externalPlatformsAPI.js  index.js  mockApi.js  mockDataService.js
src/tests/: README.md  node-contains-fix-test.js
src/utils/: autoMatching.js  createDefaultAccounts.js  currency.js  dataContextUpdates.js  debugTool.js  migrateBalances.js  mockData.js  printUtils.js  (+6 more)
track/: .env  .env.production  .eslintrc.json  README.md  package-lock.json  package.json  workspace.json
track/src-tauri/: Cargo.toml  tauri.conf.json
(+230 files in other folders)
