[package]
name = "bero-warehouse-system"
version = "2.0.0"
description = "نظام إدارة مخازن شامل - Bero Warehouse System"
authors = ["Bero System Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "fs-create-dir", "fs-write-file", "http-all", "fs-copy-file", "fs-rename-file", "fs-remove-dir", "fs-remove-file", "fs-read-file", "fs-read-dir", "fs-exists", "dialog-all", "os-all", "path-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
